--- a/config.yml
+++ b/config.yml
@@ -3,5 +3,6 @@ project_url_root: https://minecraft.curseforge.com/projects/
 old_list: old_list.txt
 new_list: new_list.txt
 max_thread_job: 5
-mod_dir: F:/Game/MC/.minecraft/versions/1.12.2/mods
+mod_dir: F:\Game\MultiMC\instances\BWEA\.minecraft\mods
 mod_list: mod_list.txt
+mod_info: mod_info.csv
